# zktrie-ng

./: .gitignore  Cargo.toml  README.md  book.toml
.github/workflows/: ci.yml  docs.yml
benches/: node.rs  trie.rs
docs/src/: SUMMARY.md  introduction.md  spec.md
docs/src/spec/: node_hashing.md  operation.md  tree_construction.md  tree_structure.md
src/: error.rs  lib.rs  scroll_types.rs
src/db/: btree_map.rs  extend.rs  hash_map.rs  key_cache.rs  middleware.rs  mod.rs  shared.rs  sled.rs  update.rs
src/db/kv/: btree_map.rs  extend.rs  hash_map.rs  middleware.rs  mod.rs  sled.rs
src/hash/: mod.rs  poseidon.rs  tests.rs
src/hash/key_hasher/: mod.rs  no_cache.rs  ref_cache.rs  sync_cache.rs
src/hash/poseidon/: mod.rs  tests.rs
src/trie/: mod.rs  node.rs
src/trie/node/: imp.rs  mod.rs  rkyv_imp.rs  tests.rs
src/trie/trie/: imp.rs  mod.rs  tests.rs
src/trie/zktrie/: imp.rs  mod.rs  tests.rs
